--- a/front/Index.html
+++ b/front/Index.html
@@ -9,13 +9,16 @@
 </head>
 <body>
     <header>
+        <img src="./imagenes/homeicon.png" alt="Home">
         <h1>Control de Tareas</h1>
+        <img src="./imagenes/campana.png" alt="campana">
     </header>
     <main>
         <section class="Filtrado">
             <div class="FltradoContenedor1">
                 <h2>Sector de Tareas</h2>
-                <button><a href="./CrearTarea.html">Crear Tarea</a></button>
+                <a href="./CrearTarea.html"><button>Crear Tarea</button></a>
+                
             </div>
             <div class="Botones">
                 <button>Tareas Echas</button>
